testsuite/tests/lexical_envs/invalid_subunit_root/test.out
= multiple =
test.py:14: error: Only one PLE unit root is allowed: Example1

= derived =
test.py:25: error: No node can derive from PLE unit roots: here we have DerivedExample

= synthetic =
test.py:43: error: Synthetic nodes cannot be PLE unit roots

= bad_main_rule_1 =
test.py:55: error: Example.list cannot appear anywhere in trees except as a root node

= bad_main_rule_2 =
error: At least one parser must create lists of PLE unit roots

= non_root_list =
test.py:84: error: Subunit.list cannot appear anywhere in trees except as a root node

= multiple_lists =
test.py:97: error: Lists of PLE unit roots cannot be subclassed

= ple_unit_root_field =
test.py:110: error: Example cannot appear anywhere in trees except as a child of Example.list nodes

Done
